cms integration : categories config

--- a/_data/categories.yml
+++ b/_data/categories.yml
@@ -1,4 +1,4 @@
   - title: Fêtes traditionnelles
     name: fetes-traditionnelles
-  - name: Visites
-    position: visites
+  - title: Visites
+    name: visites
